--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     <h2>Soon...</h2>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4441651202438205"
+     crossorigin="anonymous"></script>
   </body>
 </html>
